==> gnasour/PulseOx_I2C/MAX30102.c <==
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include "MAX30102.h"

void softReset(void)
{

  bitMask(MAX30102_MODECONFIG, MAX30102_RESET_MASK, MAX30102_RESET);

  // Poll for bit to clear, reset is then complete
  // Timeout after 100ms
  unsigned long startTime = millis();
  while (millis() - startTime < 100)
  {
    uint8_t response = readRegister8(_i2caddr, MAX30102_MODECONFIG);
    if ((response & MAX30102_RESET) == 0)
      break;  // We're done!
    delay(1); // Let's not over burden the I2C bus
  }
}

void shutDown(void)
{
  // Put IC into low power mode (datasheet pg. 19)
  // During shutdown the IC will continue to respond to I2C commands but will
  // not update with or take new readings (such as temperature)
  bitMask(MAX30102_MODECONFIG, MAX30102_SHUTDOWN_MASK, MAX30102_SHUTDOWN);
}

void wakeUp(void)
{
  // Pull IC out of low power mode (datasheet pg. 19)
  bitMask(MAX30102_MODECONFIG, MAX30102_SHUTDOWN_MASK, MAX30102_WAKEUP);
}

void enableAFULL(void)
{
  bitMask(MAX30102_INTENABLE1, MAX30102_INT_A_FULL_MASK, MAX30102_INT_A_FULL_ENABLE);
}

void disableAFULL(void)
{
  bitMask(MAX30102_INTENABLE1, MAX30102_INT_A_FULL_MASK, MAX30102_INT_A_FULL_DISABLE);
}

void enableDATARDY(void)
{
  bitMask(MAX30102_INTENABLE1, MAX30102_INT_DATA_RDY_MASK, MAX30102_INT_DATA_RDY_ENABLE);
}

void disableDATARDY(void)
{
  bitMask(MAX30102_INTENABLE1, MAX30102_INT_DATA_RDY_MASK, MAX30102_INT_DATA_RDY_DISABLE);
}

void enableALCOVF(void)
{
  bitMask(MAX30102_INTENABLE1, MAX30102_INT_ALC_OVF_MASK, MAX30102_INT_ALC_OVF_ENABLE);
}

void disableALCOVF(void)
{
  bitMask(MAX30102_INTENABLE1, MAX30102_INT_ALC_OVF_MASK, MAX30102_INT_ALC_OVF_DISABLE);
}

void enablePROXINT(void)
{
  bitMask(MAX30102_INTENABLE1, MAX30102_INT_PROX_INT_MASK, MAX30102_INT_PROX_INT_ENABLE);
}

void disablePROXINT(void)
{
  bitMask(MAX30102_INTENABLE1, MAX30102_INT_PROX_INT_MASK, MAX30102_INT_PROX_INT_DISABLE);
}

void enableDIETEMPRDY(void)
{
  bitMask(MAX30102_INTENABLE2, MAX30102_INT_DIE_TEMP_RDY_MASK, MAX30102_INT_DIE_TEMP_RDY_ENABLE);
}

void disableDIETEMPRDY(void)
{
  bitMask(MAX30102_INTENABLE2, MAX30102_INT_DIE_TEMP_RDY_MASK, MAX30102_INT_DIE_TEMP_RDY_DISABLE);
}

void setLEDMode(uint8_t mode)
{
  // Set which LEDs are used for sampling -- Red only, RED+IR only, or custom.
  // See datasheet, page 19
  bitMask(MAX30102_MODECONFIG, MAX30102_MODE_MASK, mode);
}

void setADCRange(uint8_t adcRange)
{
  // adcRange: one of MAX30102_ADCRANGE_2048, _4096, _8192, _16384
  bitMask(MAX30102_PARTICLECONFIG, MAX30102_ADCRANGE_MASK, adcRange);
}

void setSampleRate(uint8_t sampleRate)
{
  // sampleRate: one of MAX30102_SAMPLERATE_50, _100, _200, _400, _800, _1000, _1600, _3200
  bitMask(MAX30102_PARTICLECONFIG, MAX30102_SAMPLERATE_MASK, sampleRate);
}

void setPulseWidth(uint8_t pulseWidth)
{
  // pulseWidth: one of MAX30102_PULSEWIDTH_69, _188, _215, _411
  bitMask(MAX30102_PARTICLECONFIG, MAX30102_PULSEWIDTH_MASK, pulseWidth);
}

void enableSlot(uint8_t slotNumber, uint8_t device)
{

  uint8_t originalContents;

  switch (slotNumber)
  {
  case (1):
    bitMask(MAX30102_MULTILEDCONFIG1, MAX30102_SLOT1_MASK, device);
    break;
  case (2):
    bitMask(MAX30102_MULTILEDCONFIG1, MAX30102_SLOT2_MASK, device << 4);
    break;
  case (3):
    bitMask(MAX30102_MULTILEDCONFIG2, MAX30102_SLOT3_MASK, device);
    break;
  case (4):
    bitMask(MAX30102_MULTILEDCONFIG2, MAX30102_SLOT4_MASK, device << 4);
    break;
  default:
    // Shouldn't be here!
    break;
  }
}

void disableSlots(void)
{
  writeRegister8(_i2caddr, MAX30102_MULTILEDCONFIG1, 0);
  writeRegister8(_i2caddr, MAX30102_MULTILEDCONFIG2, 0);
}

void setFIFOAverage(uint8_t numberOfSamples)
{
  bitMask(MAX30102_FIFOCONFIG, MAX30102_SAMPLEAVG_MASK, numberOfSamples);
}

void clearFIFO(void)
{
  writeRegister8(_i2caddr, MAX30102_FIFOWRITEPTR, 0);
  writeRegister8(_i2caddr, MAX30102_FIFOOVERFLOW, 0);
  writeRegister8(_i2caddr, MAX30102_FIFOREADPTR, 0);
}

void enableFIFORollover(void)
{
  bitMask(MAX30102_FIFOCONFIG, MAX30102_ROLLOVER_MASK, MAX30102_ROLLOVER_ENABLE);
}

void disableFIFORollover(void)
{
  bitMask(MAX30102_FIFOCONFIG, MAX30102_ROLLOVER_MASK, MAX30102_ROLLOVER_DISABLE);
}

void setFIFOAlmostFull(uint8_t numberOfSamples)
{
  bitMask(MAX30102_FIFOCONFIG, MAX30102_A_FULL_MASK, numberOfSamples);
}

float readTemperature()
{

  // DIE_TEMP_RDY interrupt must be enabled
  // See issue 19: https://github.com/sparkfun/SparkFun_MAX3010x_Sensor_Library/issues/19

  // Step 1: Config die temperature register to take 1 temperature sample
  writeRegister8(_i2caddr, MAX30102_DIETEMPCONFIG, 0x01);

  // Poll for bit to clear, reading is then complete
  // Timeout after 100ms
  unsigned long startTime = millis();
  while (millis() - startTime < 100)
  {
    // uint8_t response = readRegister8(_i2caddr, MAX30102_DIETEMPCONFIG); //Original way
    // if ((response & 0x01) == 0) break; //We're done!

    // Check to see if DIE_TEMP_RDY interrupt is set
    uint8_t response = readRegister8(_i2caddr, MAX30102_INTSTAT2);
    if ((response & MAX30102_INT_DIE_TEMP_RDY_ENABLE) > 0)
      break;  // We're done!
    delay(1); // Let's not over burden the I2C bus
  }
  // TODO How do we want to fail? With what type of error?
  //? if(millis() - startTime >= 100) return(-999.0);

  // Step 2: Read die temperature register (integer)
  int8_t tempInt = readRegister8(_i2caddr, MAX30102_DIETEMPINT);
  uint8_t tempFrac = readRegister8(_i2caddr, MAX30102_DIETEMPFRAC); // Causes the clearing of the DIE_TEMP_RDY interrupt

  // Step 3: Calculate temperature (datasheet pg. 23)
  return (float)tempInt + ((float)tempFrac * 0.0625);
}

uint16_t check(void)
{
  // Read register FIDO_DATA in (3-byte * number of active LED) chunks
  // Until FIFO_RD_PTR = FIFO_WR_PTR

  byte readPointer = getReadPointer();
  byte writePointer = getWritePointer();

  int numberOfSamples = 0;

  // Do we have new data?
  if (readPointer != writePointer)
  {
    // Calculate the number of readings we need to get from sensor
    numberOfSamples = writePointer - readPointer;
    if (numberOfSamples < 0)
      numberOfSamples += 32; // Wrap condition

    // We now have the number of readings, now calc bytes to read
    // For this example we are just doing Red and IR (3 bytes each)
    int bytesLeftToRead = numberOfSamples * activeLEDs * 3;

    // Get ready to read a burst of data from the FIFO register
    //  _i2cPort->beginTransmission(MAX30102_ADDRESS);
    //  _i2cPort->write(MAX30102_FIFODATA);
    //  _i2cPort->endTransmission();
    i2c_write_blocking(_i2cPort, _i2caddr, &MAX30102_FIFODATA, 1, true);

    // We may need to read as many as 192 bytes so we read in blocks no larger than I2C_BUFFER_LENGTH
    // Wire.requestFrom() is limited to BUFFER_LENGTH which is 32 on the Uno
    while (bytesLeftToRead > 0)
    {
      int toGet = bytesLeftToRead;
      if (toGet > I2C_BUFFER_LENGTH)
      {
        // If toGet is 32 this is bad because we read 6 bytes (Red+IR * 3 = 6) at a time
        // 32 % 6 = 2 left over. We don't want to request 32 bytes, we want to request 30.
        // 32 % 9 (Red+IR+GREEN) = 5 left over. We want to request 27.

        toGet = I2C_BUFFER_LENGTH - (I2C_BUFFER_LENGTH % (activeLEDs * 3)); // Trim toGet to be a multiple of the samples we need to read
      }

      bytesLeftToRead -= toGet;

      // Request toGet number of bytes from sensor
      uint8_t readByteStream[I2C_BUFFER_LENGTH];
      i2c_read_burst_blocking(_i2cPort, _i2caddr, readByteStream, toGet);

      while (toGet > 0)
      {
        sense.head++;               // Advance the head of the storage struct
        sense.head %= STORAGE_SIZE; // Wrap condition

        byte temp[sizeof(uint32_t)]; // Array of 4 bytes that we will convert into long
        uint32_t tempLong;

        // Burst read three bytes - RED
        temp[3] = 0;
        temp[2] = readByteStream[0];
        temp[1] = readByteStream[1];
        temp[0] = readByteStream[2];

        // Convert array to long
        memcpy(&tempLong, temp, sizeof(tempLong));
        tempLong &= 0x3FFFF; // Zero out all but 18 bits
        sense.red[sense.head] = tempLong; //Store this reading into the sense array

        if (activeLEDs > 1)
        {
          // Burst read three more bytes - IR
          temp[3] = 0;
          temp[2] = readByteStream[3];
          temp[1] = readByteStream[4];
          temp[0] = readByteStream[5];

          // Convert array to long
          memcpy(&tempLong, temp, sizeof(tempLong));
          tempLong &= 0x3FFFF; // Zero out all but 18 bits
          sense.IR[sense.head] = tempLong;
        }

        toGet -= activeLEDs * 3;
      }

    } // End while (bytesLeftToRead > 0)

  } // End readPtr != writePtr

  return (numberOfSamples); // Let the world know how much new data we found
}

uint8_t readRegister8(uint8_t address, uint8_t reg)
{
  uint8_t readByte;
  i2c_write_blocking(_i2cPort, _i2caddr, &reg, 1, true);
  i2c_read_blocking(_i2cPort, _i2caddr, &readByte, 1, false);
  return readByte;
}

void writeRegister8(uint8_t address, uint8_t reg, uint8_t value)
{
  uint8_t writePacket[2];
  writePacket[0] = reg;
  writePacket[1] = value;
  i2c_write_blocking(_i2cPort, _i2caddr, writePacket, 2, false);
}
